--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/superagent": "^4.1.10",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.2"
+    "@types/cheerio": "^0.22.23"
   },
   "dependencies": {
-    "@types/cheerio": "^0.22.23",
+    "typescript": "^4.1.2",
+    "ts-node": "^9.1.1",
     "cheerio": "^1.0.0-rc.3",
     "superagent": "^6.1.0"
   }
