--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ts-spider",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/spider.ts",
   "scripts": {
     "start": "ts-node ./src/spider.ts"
   },
