--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
   "description": "",
   "main": "src/spider.ts",
   "scripts": {
-    "start": "ts-node ./src/spider.ts"
+    "start": "ts-node ./src/spider.ts",
+    "dev:tsc": "tsc -w",
+    "dev:nodemon": "nodemon node ./build/spider.js",
+    "dev": "concurrently npm:dev:*",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "deft",
   "license": "ISC",
+  "nodemonConfig": {
+    "ignore": ["data/*", "src/*"],
+    "delay": "2500"
+  },
   "devDependencies": {
+    "@types/cheerio": "^0.22.23",
     "@types/superagent": "^4.1.10",
-    "@types/cheerio": "^0.22.23"
+    "nodemon": "^2.0.6",
+    "ts-node": "^9.1.1"
   },
   "dependencies": {
     "typescript": "^4.1.2",
-    "ts-node": "^9.1.1",
     "cheerio": "^1.0.0-rc.3",
     "superagent": "^6.1.0"
   }
