--- a/package.json
+++ b/package.json
@@ -6,26 +6,31 @@
   "scripts": {
     "start": "ts-node ./src/spider.ts",
     "dev:tsc": "tsc -w",
-    "dev:nodemon": "nodemon node ./build/spider.js",
-    "dev": "concurrently npm:dev:*",
-    "build": "tsc"
+    "dev:nodemon": "nodemon node ./build/index.js",
+    "dev": "tsc && concurrently npm:dev:*"
   },
   "keywords": [],
   "author": "deft",
   "license": "ISC",
   "nodemonConfig": {
-    "ignore": ["data/*", "src/*"],
+    "ignore": [
+      "data/*",
+      "src/*"
+    ],
     "delay": "2500"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.23",
+    "@types/express": "^4.17.9",
     "@types/superagent": "^4.1.10",
-    "nodemon": "^2.0.6",
-    "ts-node": "^9.1.1"
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.6"
   },
   "dependencies": {
-    "typescript": "^4.1.2",
+    "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
-    "superagent": "^6.1.0"
+    "express": "^4.17.1",
+    "superagent": "^6.1.0",
+    "typescript": "^4.1.2"
   }
 }
