--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ts-node ./src/spider.ts",
     "dev:tsc": "tsc -w",
     "dev:nodemon": "nodemon node ./build/index.js",
-    "dev": "tsc && concurrently npm:dev:*"
+    "dev": "tsc && concurrently npm:dev:*",
+    "test": "tsc && node ./build/controller/LoginController.js"
   },
   "keywords": [],
   "author": "deft",
@@ -32,6 +33,7 @@
     "cheerio": "^1.0.0-rc.3",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
     "superagent": "^6.1.0",
     "typescript": "^4.1.2"
   }
